# fastapiproject

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: main.py  settings.py
src/database/: database.py  models.py
src/filters/: word_filter.py
src/repositories/: word_repository.py
src/routers/: words.py
src/schemas/: enums.py  words.py
