[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["PsychoAsto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.31"
fastapi-filter = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
